# robotiina2015

./: .gitignore  .gitmodules  Arduino.cpp  Arduino.h  AutoCalibrator.cpp  AutoCalibrator.h  AutoPilot.cpp  AutoPilot.h  AutoPlayHelpers.h  BallFinder.cpp  BallFinder.h  BallPosition.cpp  BallPosition.h  CMakeLists.txt  CalibrationConfReader.cpp  CalibrationConfReader.h  Camera.cpp  Camera.h  CoilBoard.cpp  CoilBoard.h  ColorCalibrator.cpp  ColorCalibrator.h  ComModule.cpp  ComModule.h  ComPortScanner.cpp  ComPortScanner.h  ConfigurableModule.cpp  ConfigurableModule.h  ControlModule.cpp  ControlModule.h  Dialog.cpp  Dialog.h  DistanceCalculator.cpp  DistanceCalculator.h  DistanceCalibrator.cpp  DistanceCalibrator.h  FieldState.cpp  FieldState.h  FrontCameraVision.cpp  FrontCameraVision.h  (+104 more)
Elektroonika/Firestarteri_Hotswap/: hot_swap.brd  hot_swap.sch
Elektroonika/Lisaplaat/: LisaLib.lbr  Plaat.s#1  Plaat.sch
arduino/: kaugusmoodul.ino
coilboard/: Coil2013.atsln  Coil2013.atsuo  Coil2013.avrsln  Coil2013.avrsuo
coilboard/Coil2013/: Coil2013.avrgccproj  Coil2013.cproj  coilmod.c  usb_serial.h
conf/: 720p_thresholds.txt  camera.ini~
documentation/: .~lock.calibration.xlsx#  BlockDiagam.odg  calibration.xlsx
